--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <div>
       <h1 class="title">The Mono Rail Project</h1>
-      <h3 class="description"><em>A project for the future of Oslo, by people of Oslo</em></h3>
+      <h3 class="description"><em>A project for the future of Oslo, by the people of Oslo</em></h3>
     </div>
     <div class="navbar">
       <a class="active" href="#home">Home</a>
       <a href="#ourvision">Our Vision</a>
       <a href="#project">The Project</a>
-      <a href="#about">About Us</a>
+      <a href="Omoss.html" target="_self">About Us</a>
     </div>
     <div>
       <p class="fronttext"><em>A project that aims at revolutionizing Oslo's transport-system to become more efficient, automatised and sustainable for the future.</em></p>  
