--- a/Omoss.html
+++ b/Omoss.html
@@ -4,12 +4,13 @@
 
 <head>
 <title>About Us</title>
+<link rel="stylesheet.html" type="text/css" href="stylesheet.css"/>
 </head>
 
 <body>
 <h1>About us</h1>
 
-<p>We are...</p>
+<p>We are a eager group of students at OsloMet who want to change the way public transit works in Oslo</p>
 
 </body>
 
