--- a/Omoss.html
+++ b/Omoss.html
@@ -4,7 +4,7 @@
 
 <head>
 <title>About Us</title>
-<link rel="stylesheet."" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 </head>
 
 <body>
