--- a/Omoss.html
+++ b/Omoss.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-<h1>About us</h1>
+<h1 class="title">About us</h1>
 
-<p>We are a eager group of students at OsloMet who want to change the way public transit works in Oslo</p>
+<p class="fronttext">We are a eager group of students at OsloMet who want to change the way public transit works in Oslo</p>
 
 </body>
 
