--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="navbar">
       <a class="active" href="#home">Home</a>
-      <a href="#ourvision">Our Vision</a>
+      <a href="Ourvision.html" target="_self">Our Vision</a>
       <a href="#project">The Project</a>
       <a href="Omoss.html" target="_self">About Us</a>
     </div>
