--- a/Ourvision.html
+++ b/Ourvision.html
@@ -5,10 +5,11 @@
 <head>
 
 	<title>Our Vision</title>
-
+	<link rel="stylesheet" type="text/css" href="stylesheet.css"
 </head>
 
 <body>
+	<h1>Our Vision</h1>
 	<p></p>
 
 </body>
