--- a/Ourvision.html
+++ b/Ourvision.html
@@ -5,7 +5,7 @@
 <head>
 
 	<title>Our Vision</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css"
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
