--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
       <a class="active" href="#home">Home</a>
       <a href="Ourvision.html" target="_self">Our Vision</a>
-      <a href="#project">The Project</a>
+      <a href="prosject.html" target="_self">The Project</a>
       <a href="Omoss.html" target="_self">About Us</a>
     </div>
     <div>
