--- a/Omoss.html
+++ b/Omoss.html
@@ -10,7 +10,7 @@
 <body>
 <h1 class="title">About us</h1>
 
-<p class="fronttext">We are a eager group of students at OsloMet who want to change the way public transit works in Oslo</p>
+<p class="fronttext">We are a eager group of students at OsloMet who want to change the way public transit works in Oslo.</p>
 
 </body>
 
