--- a/Ourvision.html
+++ b/Ourvision.html
@@ -6,11 +6,13 @@
 
 	<title>Our Vision</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 </head>
 
 <body>
 	<h1 class="title">Our Vision</h1>
-	<p></p>
+
+	<p class="fronttext">Our vision is to connect the people of Gjersrud-Stensrud to the rest od</p>
 
 </body>
 </html>
