--- a/prosject.html
+++ b/prosject.html
@@ -10,7 +10,10 @@
 
 <body>
 
-	<h1>The Project</h1>
+	<h1 class="title">The Project</h1>
+
+	<p class="fronttext">Our project involves over 1 km of railway lines, which will carry long trains moving between downtown Oslo
+	and Gjersrud-Stensrud. We plan to build a transportation hub in the middle of Gjersrud-Stensrud, from here, people can either hop on the Monorail heading downtown, or reach their homes via small electric buses. </p>
 
 </body>
 </html>
