--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
   <link rel = "stylesheet" type = "text/css" href = "stylesheet.css"/>
+  <meta charset = "UTF-8">
   <title>The Mono Rail Project</title>
   </head>
 
