--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <a href="Omoss.html" target="_self">About Us</a>
     </div>
     <div>
-      <p class="fronttext"><em>A project that aims at revolutionizing Oslo's transport-system to become more efficient, automatised and sustainable for the future.</em></p>  
+      <p class="fronttext"><em>A project that aims at revolutionizing Oslo's transport-system to become more efficient, automatised and sustainable for the future.</em></p>
+
+      <img src="https://www.bombardier.com/en/media/multimedia-gallery/details.bombardier-transportation-automated-monorails.html?filter-bu=buisness_unit:transport"  alt="Monorail" style="width:128px;height:128px";>
     </div>
   </body>
 
