--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </body>
 
   <footer>
-   <img src="https://img.caixin.com/2016-12-23/1482472288511726.jpg" alt="Monorail">
+   <img src="https://img.caixin.com/2016-12-23/1482472288511726.jpg" alt="Monorail" style="width:128px;height:128px;">
   </footer>
 
 
