--- a/prosject.html
+++ b/prosject.html
@@ -15,5 +15,12 @@
 	<p class="fronttext">Our project involves over 1 km of railway lines, which will carry long trains moving between downtown Oslo
 	and Gjersrud-Stensrud. We plan to build a transportation hub in the middle of Gjersrud-Stensrud, from here, people can either hop on the Monorail heading downtown, or reach their homes via small electric buses. </p>
 
+
+<footer>
+
+	<img src="map.jpg" alt="Kart" style="width:400px;height:300px;">
+
+</footer>
+
 </body>
 </html>
