--- a/prosject.html
+++ b/prosject.html
@@ -18,7 +18,7 @@
 
 <footer>
 
-	<img src="map.jpg" alt="Kart" style="width:400px;height:300px;">
+	<img src="Map.jpg" alt="Kart" style="width:400px;height:300px;">
 
 </footer>
 
